tests/should_fail/let_struct_literal_field.nv
module fail
// Let destructure: struct with literal in field (refutable)
struct Point { x: Int, y: Int }
let Point { x: 0, y } = Point(1, 2)
